--- a/draft/lotto.html
+++ b/draft/lotto.html
@@ -61,8 +61,8 @@
     <div class="body__container">
 
         <header>
-            <div class="home">
-                <img src="../img/home.png" onclick="location.href='main.html'">
+            <div class="home" onclick="location.href='main.html'">
+                <!--<img src="../img/home.png" > -->
             </div>
         </header>
 
