--- a/draft/main.html
+++ b/draft/main.html
@@ -5,7 +5,7 @@
     <meta name="author" content="liswktjs">
     <meta name="description" content="This is developed to find account that fit with me"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>용돈 기입장*main ver2</title>
+    <title>용돈 기입장 main ver2</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Song+Myung&display=swap" rel="stylesheet">
     
@@ -69,7 +69,7 @@
 
         <section class="goal">
 
-            <div class="goal_img">
+            <div class="goal_img" onclick="location.href='goal.html'">
                 <img src="../img/mac.jpeg"/>
             </div>
             <div class="goal_title">
