draft account_list ver

--- a/draft/account.html
+++ b/draft/account.html
@@ -25,7 +25,7 @@
                             document.write(month + "월");
                 </script>
             </div>
-            <div class="plus">
+            <div class="plus" onclick="location.href='account_list.html'">
                 
             </div>
         </header>
