--- a/draft/account_list.html
+++ b/draft/account_list.html
@@ -14,17 +14,24 @@
 <body>
     <div class="body__container">
         <header>
-            <div class="back" >
+            <div class="back" onclick="location.href='main.html'">
                 
             </div>
         </header>
 
         <section class="content">
             <form class="write" id="write" action="#" method="get">
-                <p class="inoutcome">수입/지출 <input type="checkbox"</p>
-                <p class="date">날짜 <input type="date"></p>
-                <p class="writing">내역 <input type="text"></p>
-                <p class="price">가격 <input type="number"></p>
+                <p class="inoutcome">수입/지출 <br><br>
+                    <select name="income_outcome">
+                    <optgroup>
+                        <option value="income">수입</option>
+                        <option value="outcome">지출</option>
+                    </optgroup>
+                    </select>
+                </p>
+                <p class="date">날짜 <br><br> <input type="date"></p>
+                <p class="writing">내역 <br><br> <input type="text"></p>
+                <p class="price">가격 <br><br> <input type="number"></p>
             </form>
 
             <button class="write_on" id="write_on">
