--- a/draft/account_list.html
+++ b/draft/account_list.html
@@ -14,7 +14,7 @@
 <body>
     <div class="body__container">
         <header>
-            <div class="back" onclick="location.href='main.html'">
+            <div class="back" onclick="location.href='account.html'">
                 
             </div>
         </header>
