--- a/draft/daily_goal.html
+++ b/draft/daily_goal.html
@@ -2,23 +2,18 @@
 <html lang="kor">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="liswktjs">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>목표</title>
+    <title>일 목표</title>
+
     <link href="https://fonts.googleapis.com/css2?family=Song+Myung&display=swap" rel="stylesheet">
-    <link ref="stylesheet" href="../css/reset.css">
-    <link ref="stylesheet" href="../css/goal.css">
+    
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/daily_goal.css">
 </head>
 <body>
     <div class="body__container">
-        <header>
-
-        </header>
-        
-        <section>
-
-        </section>
-
+        아아아
     </div>
 </body>
 </html>
