--- a/draft/main.html
+++ b/draft/main.html
@@ -30,7 +30,7 @@
         </header>
 
         <section class="object_container">
-            <div class="monthly_object">
+            <div class="monthly_object" onclick="location.href='monthly_goal.html'">
                 <div class="monthly_title" id="monthly_title" value="monthly_title">
                     <script>
                         let m = new Date();
@@ -47,7 +47,7 @@
                 
             </div>
 
-            <div class="today_object">
+            <div class="today_object" onclick="location.href='daily_goal.html'">
                 <div class="today_title">
                     TODAY
                 </div>
