--- a/draft/myinfo.html
+++ b/draft/myinfo.html
@@ -13,7 +13,30 @@
 </head>
 <body>
     <div class="body__container">
-        
+        <header>
+            <div class="back" onclick="location.href='main.html'"></div>
+        </header>
+
+        <section class="profile">
+            <div class="profile_container">
+                <div class="profile_pic">
+                    <img src="../img/person.png">
+                </div>
+            </div>
+        </section>
+
+        <section class="info_list">
+            <div class="info_container">
+                <div class="user_name">이름 : 0 0 0</div>
+                <div class="user_hbd">생일: 2000 01 01</div>
+            </div>
+        </section>
+
+        <section class="modify_container">
+            <div class="modify_btn">
+                수정 
+            </div>
+        </section>
     </div>
 </body>
 </html>
