--- a/draft/static.html
+++ b/draft/static.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kor">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="liswktjs">
+    <title>통계</title>
+    <link href="https://fonts.googleapis.com/css2?family=Song+Myung&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/static.css">
+
 </head>
 <body>
-    static
+    <div class="body__container">
+        <header>
+            
+        </header>
+    </div>
 </body>
 </html>
