--- a/draft/goal.html
+++ b/draft/goal.html
@@ -6,19 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>목표</title>
     <link href="https://fonts.googleapis.com/css2?family=Song+Myung&display=swap" rel="stylesheet">
-    <link ref="stylesheet" href="../css/reset.css">
-    <link ref="stylesheet" href="../css/goal.css">
+    <link ref="stylesheet" href="/css/reset.css">
+    <link ref="stylesheet" href="/css/goal.css">
+
 </head>
 <body>
     <div class="body__container">
         <header>
-
+            
         </header>
-        
-        <section>
-
-        </section>
-
     </div>
 </body>
 </html>
