--- a/draft/monthly_goal.html
+++ b/draft/monthly_goal.html
@@ -13,7 +13,34 @@
 </head>
 <body>
     <div class="body__container">
-        월 목표
+        <div class="body">
+            <header>
+                <button class="home" style="background-image: url(/img/home.png);">
+                    
+                </button>
+            </header>
+            <div class="mon_will">
+                <div class="will_circle">
+                    이번 달 쓸 돈
+                </div>
+            </div>
+            <div class="mon_done">
+                <div class="done_circle">
+                    이번 달 쓴 돈
+                </div>
+            </div>
+            <div class="mon_obj">
+                <p class="obj_mon">
+                    3월
+                </p>
+                <p class="obj_total">
+                    이번달 쓸 금액
+                </p>
+                <button class="mon_btn">
+                    수정
+                </button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
